syntax = "proto3";

package proto;

message LoginRequest{
	string cid = 1;//cid of client
	int32 device_type = 2; 
	string client_version = 3;
	bytes token = 4; //to login server 
}

message LoginResponse{
	int32 status = 1;//if 0 success, else fail
	bytes token = 2;//the token, the same as client request
	string cid = 3;
	int64 server_time = 4;
} 

message RedirectResponse{
	int32 status = 1;//if 0 success, else fail
	string addrs = 2;
	bytes token = 3;//connect to connect server
} 

message ServerRegisterReq{
	uint32 service_type = 1;
}

message ServerRegisterRes{
	int32 status = 1;
}


message ServiceRequest{
	bytes token = 1;
	int32 service_type = 2;
	string sn = 3;//each req has an unique sn
	bytes payload = 4;// payload
}

message ServiceResponse{
	bytes token = 1;
	int32 service_type = 2;
	string sn = 3;//each req has an unique sn
	int32 status = 4;// 0 success
	bytes payload = 5;
}